feat: added ingreient endpoint
